--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
   
   <h1>Frogger (come up with a better name)</h1>
-  <button id="start">Start Game </button>
+  
+  <div class="controls-wrapper">
+    <button id="start">Start Game </button>
+    <p> Current Score: <span id="score-display">0</span></p>
+    <p> Lives Remaining: <span id="lives-display">3</span></p>
+  </div>
 
   <div class="grid-wrapper">
     <div class ="grid"></div>
