--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/main.css">
   <script src="./scripts/app.js" charset="utf-8"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
+  <div class="header">
+    <h1>Lipper</h1>
   
-  <h1>Frogger (come up with a better name)</h1>
-  
-  <div class="controls-wrapper">
-    <button id="start">Start Game </button>
-    <p> Current Score: <span id="score-display">0</span></p>
-    <p> Lives Remaining: <span id="lives-display">3</span></p>
+    <div class="controls-wrapper">
+      <button id="start">Start Game! </button>
+        <p> Current Score: <span id="score-display">0</span></p>
+        <p> Lives Remaining: <span id="lives-display">3</span></p>
+    </div>
   </div>
 
   <div class="grid-wrapper">
