--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <button id="start">Start Game! </button>
         <p> Current Score: <span id="score-display">0</span></p>
         <p> Lives Remaining: <span id="lives-display">3</span></p>
+        <p> Level <span id="level-display">1</span></p>
     </div>
   </div>
 
