media query attempt

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="header">
+  <div class ="bigDiv">
+  <header class="header">
     <h1>Lipper</h1>
   
     <div class="controls-wrapper">
@@ -20,10 +21,11 @@
         <p> Lives Remaining: <span id="lives-display">3</span></p>
         <p> Level <span id="level-display">1</span></p>
     </div>
-  </div>
+  </header>
 
   <div class="grid-wrapper">
     <div class ="grid"></div>
+  </div>
   </div>
 
 </body>
