--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="./scripts/app.js" charset="utf-8"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap" rel="stylesheet">
-  <title>Document</title>
+  <title>Lipper</title>
 </head>
 <body>
   <div class ="bigDiv">
